--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon backend/server.js",
+    "client":"npm start --prefix frontend",
+    "dev":"concurrently \"npm start\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "dinesh",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^7.3.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "nodemon": "^2.0.19"
